--- a/haxball_site/templates/core/include/comments.html
+++ b/haxball_site/templates/core/include/comments.html
@@ -49,7 +49,7 @@
                                             {% endfor %}
                                             {{ comment.author.username }}
                                             <span class="badge">
-                                        {% karma comment.author.user_profile %}
+                                        {# karma comment.author.user_profile #}
                                     </span>
                                         </h5>
                                     </a>
@@ -132,7 +132,7 @@
                                                     {% endfor %}
                                                     {{ children.author.username }}
                                                     <span class="badge">
-                                        {% karma children.author.user_profile %}
+                                        {# karma children.author.user_profile #}
                                     </span>
                                                 </h5>
                                             </a>
