--- a/haxball_site/templates/core/post/detail.html
+++ b/haxball_site/templates/core/post/detail.html
@@ -15,20 +15,25 @@
     </style>
 {% endblock %}
 {% block scripts %}
-     <script type="text/javascript" src="{% static "ckeditor/ckeditor/plugins/spoiler/spoiler.js" %}"></script>
+    <script type="text/javascript" src="{% static "ckeditor/ckeditor/plugins/spoiler/spoiler.js" %}"></script>
     <!-- Аякс-скрипт проставления лайков-дизлайков к постам -->
-  <script type="text/javascript" src="{% static "core/js/like-dislike.js" %}"></script>
+    <script type="text/javascript" src="{% static "core/js/like-dislike.js" %}"></script>
 
 {% endblock %}
 {% block post %}
 
     <div class="card mb-4 mt-2" style="border-radius: 25px">
         <div class="card-header" style="border-radius: 25px">
-            <h4 class="card-title mb-1">{{ post.title }}
-                {% if post.author == user or user.is_superuser %}
-                    <a href="{% url 'core:post_edit' post.slug post.id %}"
-                       class="text-warning small text-right"><i class="fa fa-pencil" aria-hidden="true"></i></a>
-                {% endif %}
+            <h4 class="card-title mb-1">
+                <div class="d-flex justify-content-between">
+                    <span>{{ post.title }}
+                        {% if post.author == user or user.is_superuser %}
+                            <a href="{% url 'core:post_edit' post.slug post.id %}"
+                               class="text-warning small text-right"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                        {% endif %}
+                    </span>
+                    <span class="text-right"><span class="font-italic h6">В теме</span> <a href="{{ post.category.get_absolute_url }}" class="h5">{{ post.category.title }}</a></span>
+                </div>
             </h4>
             <small class="text-muted">
                 <img src="{% static "img/ico/calendar_1.png" %}" height="21"
