--- a/haxball_site/templates/tournament/teams/team_page.html
+++ b/haxball_site/templates/tournament/teams/team_page.html
@@ -109,7 +109,7 @@
                                 <th scope="col"><span class="h5">Игрок</span></th>
                                 <th scope="col" class="text-center"><img
                                         src="{% static "img/ico/matches_icon.png" %}" height="20" width="20"
-                                        title="Вышел в старте"></th>
+                                        title="Вышел на поле"></th>
                                 <th scope="col" class="text-center"><img
                                         src="{% static "img/ico/ball_2.png" %}" height="20" width="20"
                                         title="Забито"></th>
@@ -118,7 +118,7 @@
                                         title="Голевые передачи"></th>
                                 <th scope="col" class="text-center"><img
                                         src="{% static "img/ico/clean_sheet1.png" %}" height="20" width="20"
-                                        title="Сухие матчи"></th>
+                                        title="Сухие таймы"></th>
                                 <th scope="col">
                                     <div class="h-75 text-center">
                                         <i class="fa fa-arrow-down text-danger" title="Заменён" aria-hidden="true"
@@ -127,7 +127,7 @@
                                 </th>
                                 <th scope="col">
                                     <div class="h-75 text-center">
-                                        <i class="fa fa-arrow-up text-success" title="Вышел на поле" aria-hidden="true"
+                                        <i class="fa fa-arrow-up text-success" title="Вышел на замену" aria-hidden="true"
                                            style="font-size: 21px"></i>
                                     </div>
                                 </th>
