--- a/haxball_site/templates/core/include/comments.html
+++ b/haxball_site/templates/core/include/comments.html
@@ -48,9 +48,11 @@
                                                      title="{{ icon.description }}">
                                             {% endfor %}
                                             {{ comment.author.username }}
-                                            <span class="badge">
-                                        {# karma comment.author.user_profile #}
-                                    </span>
+                                            <span class="badge p-0">
+                                            <span class="badge badge-pill
+                            {% if comment.author.user_profile.karma >= 0 %}badge-success{% else %}badge-danger{% endif %}">{{ comment.author.user_profile.karma }}
+                                            </span>
+                                            </span>
                                         </h5>
                                     </a>
                                     {% if user.is_superuser or comment.author == user and comment|can_edit %}
@@ -131,9 +133,12 @@
                                                              title="{{ icon.description }}">
                                                     {% endfor %}
                                                     {{ children.author.username }}
-                                                    <span class="badge">
-                                        {# karma children.author.user_profile #}
-                                    </span>
+                                                    <span class="badge p-0">
+                                                        <span class="badge badge-pill
+                                                            {% if comment.author.user_profile.karma >= 0 %}badge-success{% else %}badge-danger{% endif %}">{{ comment.author.user_profile.karma }}
+                                                        </span>
+                                                    </span>
+
                                                 </h5>
                                             </a>
 
