--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -33,13 +33,13 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'tournament:league' 'premier_league' %}">Единая лига</a>
                     <a class="dropdown-item" href="#">Кубок России</a>
-                    <a class="dropdown-item" href="#">Результаты</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/108/results">Результаты</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/86/reglament">Регламент</a>
-                    <a class="dropdown-item" href="#">Бронь хоста</a>
-                    <a class="dropdown-item" href="#">Переносы</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/110/bron_hosta">Бронь хоста</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/109/perenosi">Переносы</a>
                     <a class="dropdown-item" href="https://www.cis-haxball.com/post/104/transfers">Трансферы</a>
                     <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">Свободные агенты</a>
-                    <a class="dropdown-item" href="#">Стол заявок</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/111/org_razdel">Стол заявок</a>
 
                 </div>
             </li>
